--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,3 +4,13 @@
 @use 'foundation/mixin';      // ミックスインの定義（base の前）
 @use 'foundation/base';       // 変数やミックスインの定義(これより先に、
                               // 変数（variable）やミクスイン（mixin）の定義ファイルを読む
+
+                              
+// layoutフォルダ
+
+
+
+// objectフォルダ
+
+
+
