--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ html {
   word-break: break-all;
   font-size: 10px;
 }
-@media only screen and (min-width: 768) and (max-width: 940) {
+@media (min-width: 768px) and (max-width: 940px) {
   html {
     font-size: 1.0638297872vw;
   }
@@ -34,74 +34,153 @@ a {
   cursor: pointer;
 }
 
-.l-inner {
+@media (max-width: 767px) {
+  .pc {
+    display: none !important;
+  }
+}
+@media (min-width: 768px) {
+  .sp {
+    display: none !important;
+  }
+}
+.l-header {
   background-color: yellow;
-  max-width: 94rem;
   width: 100%;
-  padding-inline: 3rem;
-  margin: 0 auto;
   height: 8rem;
-}
-
-.p-header {
+  padding-inline: 10rem;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 767px) {
+  .l-header {
+    height: 5rem;
+    padding-inline: 2rem 0;
+  }
 }
 
-.p-header-wrap {
-  height: inherit;
-  display: flex;
-  align-items: center;
-  column-gap: 24.9rem;
-}
-
-.p-header-logo {
+.l-header__logo {
+  background-color: aqua;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding-top: 0.6rem;
 }
 
-.p-header-logo__img {
+.l-header-logo__img {
   width: 3.3rem;
 }
-
-.p-header-logo__text {
-  padding-left: 0.9rem;
+@media only screen and (max-width: 767px) {
+  .l-header-logo__img {
+    width: 2rem;
+    padding-top: 4px;
+  }
 }
 
-.p-header-logo__text h1 {
+.l-header-logo__text {
+  padding: 0.9rem;
+}
+@media only screen and (max-width: 767px) {
+  .l-header-logo__text {
+    display: flex;
+    align-items: center;
+    padding: 1.4rem 0 1.8rem 0.8rem;
+  }
+}
+
+.l-header-logo h1 {
   font-size: 2rem;
   line-height: 1.15;
 }
+@media only screen and (max-width: 767px) {
+  .l-header-logo h1 {
+    font-size: 1.3rem;
+    line-height: 1.0769230769;
+  }
+}
 
-.p-header-logo__text span {
-  display: block;
+.l-header-logo h1 span {
   font-size: 1.5rem;
   line-height: 1.5333333333;
 }
-
-.p-header-nav {
-  height: inherit;
+@media only screen and (max-width: 767px) {
+  .l-header-logo h1 span {
+    font-size: 1.3rem;
+    line-height: 1.0769230769;
+  }
 }
 
-.p-header-nav__lists {
+.l-header__right {
+  height: inherit;
+  display: flex;
+  justify-content: space-between;
+}
+@media only screen and (max-width: 767px) {
+  .l-header__right {
+    display: block;
+  }
+}
+
+.l-header-nav {
+  height: inherit;
+}
+@media only screen and (max-width: 767px) {
+  .l-header-nav {
+    width: 30rem;
+    position: fixed;
+    top: 5rem;
+    right: -120%;
+    transition: right 0.5s ease;
+  }
+}
+
+.l-header-nav.active {
+  right: 0;
+}
+
+.l-header-nav__lists {
   height: inherit;
   display: flex;
   align-items: center;
+}
+@media only screen and (max-width: 767px) {
+  .l-header-nav__lists {
+    height: 17.4rem;
+    flex-direction: column;
+  }
+}
+
+.l-header-nav__list {
+  height: inherit;
+}
+@media only screen and (max-width: 767px) {
+  .l-header-nav__list {
+    height: 5.8rem;
+    width: 100%;
+  }
+}
+
+.l-header-nav__list a {
+  background-color: pink;
+  height: inherit;
+  display: block;
+  padding-inline: 1.7rem;
   font-size: 1.7rem;
   line-height: 1.9411764706;
-  padding-inline: 1.7rem;
-}
-
-.p-header-nav__lists a {
-  height: inherit;
-}
-
-.p-header-nav__list {
-  background-color: aqua;
-  height: inherit;
   padding-top: 2.6rem;
-  padding-inline: 1.7rem;
+}
+@media only screen and (max-width: 767px) {
+  .l-header-nav__list a {
+    background-color: #CB0000;
+    color: #fff;
+    padding-top: 1.7rem;
+    padding-inline: 1.9rem 0;
+    font-size: 1.8rem;
+    line-height: 1.8333333333;
+  }
 }
 
 .c-btn {
@@ -112,24 +191,59 @@ a {
 .c-btn--header {
   font-size: 1.5rem;
   line-height: 2.2;
-  margin-block: 1.8rem;
-  padding: 0.7rem 3rem 1rem;
+  margin: 1.8rem 0 1.7rem 1.7rem;
+  padding: 0.6rem 3rem 0.5rem;
 }
 
-.c-btn--fixed {
-  font-size: 2rem;
-  line-height: 1.65;
-  padding: 1.7rem 8.2rem 1rem;
+.c-hamburger {
+  width: 7.1rem;
+  height: 100%;
+  background-color: #CB0000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
-.c-btn--contact {
-  font-size: 2.5rem;
-  line-height: 1.32;
-  padding: 1rem 9.6rem 0.7rem;
+.c-hamburger__inner {
+  width: 3.6rem;
+  height: 2.8rem;
+  background-color: #CB0000;
+  position: relative;
 }
 
-.c-btn--backhome {
-  font-size: 2.5rem;
-  line-height: 1.32;
-  padding: 1rem 5rem 0.7rem;
+.c-hamburger__inner span {
+  width: 100%;
+  height: 0.4rem;
+  background-color: #fff;
+  border-radius: 0.2rem;
+  position: absolute;
+  left: 0;
+  transition: all 0.4s ease;
+}
+
+.c-hamburger__inner span:nth-of-type(1) {
+  top: 0;
+}
+
+.c-hamburger__inner span:nth-of-type(2) {
+  top: 1.2rem;
+}
+
+.c-hamburger__inner span:nth-of-type(3) {
+  top: 2.4rem;
+}
+
+.c-hamburger.active .c-hamburger__inner span:nth-of-type(1) {
+  top: 1.2rem;
+  transform: rotate(45deg);
+}
+
+.c-hamburger.active .c-hamburger__inner span:nth-of-type(2) {
+  display: none;
+}
+
+.c-hamburger.active .c-hamburger__inner span:nth-of-type(3) {
+  top: 1.2rem;
+  transform: rotate(-45deg);
 }
